apps/default/jupyterhub/app/httproute.yaml
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hub
spec:
  hostnames:
  - hub.${SECRET_DOMAIN:=example.com}
  parentRefs:
  - name: internal
    namespace: kube-system
    sectionName: https
  rules:
  - backendRefs:
      -  name: proxy-public
         port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
